--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,4 @@
-# Example Audio Plugin CMakeLists.txt
-
-# To get started on a new plugin, copy this entire folder (containing this file and C++ sources) to
-# a convenient location, and then start making modifications.
-
-# The first line of any CMake project should be a call to `cmake_minimum_required`, which checks
-# that the installed CMake will be able to understand the following CMakeLists, and ensures that
-# CMake's behaviour is compatible with the named version. This is a standard CMake command, so more
-# information can be found in the CMake docs.
-
 cmake_minimum_required(VERSION 3.22)
-# The top-level CMakeLists.txt file for a project must contain a literal, direct call to the
-# `project()` command. `project()` sets up some helpful variables that describe source/binary
-# directories, and the current project version. This is a standard CMake command.
 
 project(SmoothDistortion VERSION 0.0.2)
 
@@ -20,10 +7,6 @@ project(SmoothDistortion VERSION 0.0.2)
 # included JUCE directly in your source tree (perhaps as a submodule), you'll need to tell CMake to
 # include that subdirectory as part of the build.
 
-# find_package(JUCE CONFIG REQUIRED)        # If you've installed JUCE to your system
-# or
-# add_subdirectory(JUCE)                    # If you've put JUCE in a subdirectory called JUCE
-
 include(FetchContent)
 FetchContent_Declare(
         JUCE
@@ -31,18 +14,6 @@ FetchContent_Declare(
         GIT_TAG 7.0.2
 )
 FetchContent_MakeAvailable(JUCE)
-
-# If you are building a VST2 or AAX plugin, CMake needs to be told where to find these SDKs on your
-# system. This setup should be done before calling `juce_add_plugin`.
-
-# juce_set_vst2_sdk_path(...)
-# juce_set_aax_sdk_path(...)
-
-# `juce_add_plugin` adds a static library target with the name passed as the first argument
-# (AudioPluginExample here). This target is a normal CMake target, but has a lot of extra properties set
-# up by default. As well as this shared code static library, this function adds targets for each of
-# the formats specified by the FORMATS arguments. This function accepts many optional arguments.
-# Check the readme at `docs/CMake API.md` in the JUCE repo for the full list.
 
 juce_add_plugin(SmoothDistortion
         # VERSION ...                               # Set this if the plugin version is different to the project version
@@ -102,7 +73,7 @@ target_compile_definitions(SmoothDistortion
 # static library. These source files can be of any kind (wav data, images, fonts, icons etc.).
 # Conversion to binary-data will happen when your target is built.
 
-juce_add_binary_data(AudioPluginData SOURCES ${CMAKE_CURRENT_SOURCE_DIR}\\assets\\juanma_plugin_knob.png ${CMAKE_CURRENT_SOURCE_DIR}\\assets\\juanma_recurso_texto.svg)
+juce_add_binary_data(SmoothDistortionData SOURCES ${CMAKE_CURRENT_SOURCE_DIR}\\assets\\knob.png ${CMAKE_CURRENT_SOURCE_DIR}\\assets\\background.svg)
 
 # `target_link_libraries` links libraries and JUCE modules to other libraries or executables. Here,
 # we're linking our executable target to the `juce::juce_audio_utils` module. Inter-module
@@ -112,7 +83,7 @@ juce_add_binary_data(AudioPluginData SOURCES ${CMAKE_CURRENT_SOURCE_DIR}\\assets
 
 target_link_libraries(SmoothDistortion
         PRIVATE
-        AudioPluginData           # If we'd created a binary data target, we'd link to it here
+        SmoothDistortionData           # If we'd created a binary data target, we'd link to it here
         juce::juce_audio_utils
         PUBLIC
         juce::juce_recommended_config_flags
